Siste runde med kodeverk (#4617)
* Siste runde med kodeverk

* Fjerne obligatoriskTilstand